--- a/package.json
+++ b/package.json
@@ -1,9 +1,200 @@
 {
+  "name": "ecommerce",
+  "version": "1.0.0",
+  "description": "[![MIT License](https://img.shields.io/apm/l/atomic-design-ui.svg?)](https://github.com/tterb/atomic-design-ui/blob/master/LICENSEs)",
+  "main": "server.js",
   "dependencies": {
+    "ansi-styles": "^4.3.0",
+    "abbrev": "^1.1.1",
+    "anymatch": "^3.1.2",
+    "accepts": "^1.3.7",
+    "ansi-regex": "^5.0.0",
+    "ansi-align": "^3.0.0",
+    "any-promise": "^1.3.0",
+    "array-flatten": "^1.1.1",
+    "body-parser": "^1.19.0",
+    "boxen": "^4.2.0",
+    "balanced-match": "^1.0.2",
+    "binary-extensions": "^2.2.0",
+    "bytes": "^3.1.0",
+    "camelcase": "^5.3.1",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "cacheable-request": "^6.1.0",
+    "ci-info": "^2.0.0",
+    "chokidar": "^3.5.2",
+    "cli-boxes": "^2.2.1",
+    "color-convert": "^2.0.1",
+    "chalk": "^3.0.0",
+    "concat-map": "^0.0.1",
+    "content-type": "^1.0.4",
+    "clone-response": "^1.0.2",
+    "color-name": "^1.1.4",
+    "content-disposition": "^0.5.3",
+    "cookie": "^0.4.0",
+    "cookie-signature": "^1.0.6",
+    "debug": "^2.6.9",
+    "configstore": "^5.0.1",
+    "crypto-random-string": "^2.0.0",
+    "decompress-response": "^3.3.0",
+    "deep-extend": "^0.6.0",
+    "depd": "^1.1.2",
+    "denque": "^1.5.0",
+    "defer-to-connect": "^1.1.3",
+    "dottie": "^2.0.2",
+    "destroy": "^1.0.4",
     "dotenv": "^10.0.0",
+    "dot-prop": "^5.3.0",
+    "duplexer3": "^0.1.4",
+    "emoji-regex": "^8.0.0",
+    "end-of-stream": "^1.4.4",
+    "ee-first": "^1.1.1",
+    "encodeurl": "^1.0.2",
+    "etag": "^1.8.1",
+    "escape-goat": "^2.1.1",
     "express": "^4.17.1",
+    "forwarded": "^0.2.0",
+    "escape-html": "^1.0.3",
+    "fill-range": "^7.0.1",
+    "finalhandler": "^1.1.2",
+    "fresh": "^0.5.2",
+    "get-stream": "^4.1.0",
+    "global-dirs": "^2.1.0",
+    "generate-function": "^2.3.1",
+    "has-flag": "^3.0.0",
+    "graceful-fs": "^4.2.6",
+    "glob-parent": "^5.1.2",
+    "got": "^9.6.0",
+    "has-yarn": "^2.1.0",
+    "http-cache-semantics": "^4.1.0",
+    "import-lazy": "^2.1.0",
+    "ignore-by-default": "^1.0.1",
+    "imurmurhash": "^0.1.4",
+    "inherits": "^2.0.3",
+    "iconv-lite": "^0.4.24",
+    "inflection": "^1.13.1",
+    "ini": "^1.3.7",
+    "is-ci": "^2.0.0",
+    "is-extglob": "^2.1.1",
+    "ipaddr.js": "^1.9.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-binary-path": "^2.1.0",
+    "is-glob": "^4.0.1",
+    "is-property": "^1.0.2",
+    "is-number": "^7.0.0",
+    "is-installed-globally": "^0.3.2",
+    "is-npm": "^4.0.0",
+    "is-path-inside": "^3.0.3",
+    "is-obj": "^2.0.0",
+    "is-typedarray": "^1.0.0",
+    "http-errors": "^1.7.2",
+    "json-buffer": "^3.0.0",
+    "is-yarn-global": "^0.3.0",
+    "keyv": "^3.1.0",
+    "latest-version": "^5.1.0",
+    "long": "^4.0.0",
+    "lru-cache": "^6.0.0",
+    "lowercase-keys": "^1.0.1",
+    "lodash": "^4.17.21",
+    "make-dir": "^3.1.0",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "mime-types": "^2.1.32",
+    "mime-db": "^1.49.0",
+    "mime": "^1.6.0",
+    "minimist": "^1.2.5",
+    "minimatch": "^3.0.4",
+    "mimic-response": "^1.0.1",
+    "moment-timezone": "^0.5.33",
+    "moment": "^2.29.1",
+    "named-placeholders": "^1.1.2",
     "mysql2": "^2.2.5",
+    "ms": "^2.0.0",
+    "nopt": "^1.0.10",
+    "normalize-url": "^4.5.1",
     "nodemon": "^2.0.12",
-    "sequelize": "^6.6.5"
-  }
+    "normalize-path": "^3.0.0",
+    "negotiator": "^0.6.2",
+    "once": "^1.4.0",
+    "on-finished": "^2.3.0",
+    "package-json": "^6.5.0",
+    "p-cancelable": "^1.1.0",
+    "prepend-http": "^2.0.0",
+    "pseudomap": "^1.0.2",
+    "parseurl": "^1.3.3",
+    "path-to-regexp": "^0.1.7",
+    "proxy-addr": "^2.0.7",
+    "pstree.remy": "^1.1.8",
+    "pump": "^3.0.0",
+    "pupa": "^2.1.1",
+    "rc": "^1.2.8",
+    "range-parser": "^1.2.1",
+    "qs": "^6.7.0",
+    "raw-body": "^2.4.0",
+    "picomatch": "^2.3.0",
+    "readdirp": "^3.6.0",
+    "registry-auth-token": "^4.2.1",
+    "registry-url": "^5.1.0",
+    "safe-buffer": "^5.1.2",
+    "responselike": "^1.0.2",
+    "retry-as-promised": "^3.2.0",
+    "semver-diff": "^3.1.1",
+    "semver": "^7.3.5",
+    "safer-buffer": "^2.1.2",
+    "seq-queue": "^0.0.5",
+    "sequelize-pool": "^6.1.0",
+    "send": "^0.17.1",
+    "sequelize": "^6.6.5",
+    "signal-exit": "^3.0.3",
+    "serve-static": "^1.14.1",
+    "setprototypeof": "^1.1.1",
+    "sqlstring": "^2.3.2",
+    "statuses": "^1.5.0",
+    "strip-ansi": "^6.0.0",
+    "strip-json-comments": "^2.0.1",
+    "string-width": "^4.2.2",
+    "term-size": "^2.2.1",
+    "supports-color": "^5.5.0",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.0",
+    "to-readable-stream": "^1.0.0",
+    "type-is": "^1.6.18",
+    "toposort-class": "^1.0.1",
+    "type-fest": "^0.8.1",
+    "undefsafe": "^2.0.3",
+    "unpipe": "^1.0.0",
+    "touch": "^3.1.0",
+    "typedarray-to-buffer": "^3.1.5",
+    "update-notifier": "^4.1.3",
+    "unique-string": "^2.0.0",
+    "url-parse-lax": "^3.0.0",
+    "utils-merge": "^1.0.1",
+    "validator": "^13.6.0",
+    "wrappy": "^1.0.2",
+    "uuid": "^8.3.2",
+    "vary": "^1.1.2",
+    "wkx": "^0.5.0",
+    "xdg-basedir": "^4.0.0",
+    "yallist": "^4.0.0",
+    "widest-line": "^3.1.0",
+    "write-file-atomic": "^3.0.3"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "seed": "node seeds/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CrowdeRyan/Ecommerce.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/CrowdeRyan/Ecommerce/issues"
+  },
+  "homepage": "https://github.com/CrowdeRyan/Ecommerce#readme"
 }
